# task_manager

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
main/: admin.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task_task_main_task_priorit_fe4dce_idx.py
main/models/: __init__.py  mymodels.py
task_manager/: settings.py  urls.py
test/: test_admin.py
