[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = ""
authors = ["no1dori"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
